Auction completes and stock round starts

--- a/.virtual_documents/nbs/game/engine/game/titles/00_g1830.ipynb
+++ b/.virtual_documents/nbs/game/engine/game/titles/00_g1830.ipynb
@@ -28,7 +28,7 @@ from rl18xx.game.engine.round import (
 
 
 # | export
-class G1830Entities:
+class Entities:
     COMPANIES = [
         {
             "name": "Schuylkill Valley",
@@ -232,7 +232,7 @@ class G1830Entities:
 # | export
 
 
-class G1830Map:
+class Map:
     TILES = {
         "1": 1,
         "2": 1,
@@ -434,12 +434,15 @@ class G1830Map:
     LAYOUT = "pointy"
 
 
+
+
+
 # | export
 
 from rl18xx.game.engine.game.base import Meta as BaseMeta
 
 
-class G1830Meta(BaseMeta):
+class Meta(BaseMeta):
     DEV_STAGE = "production"
     GAME_SUBTITLE = "Railways & Robber Barons"
     GAME_DESIGNER = "Francis Tresham"
@@ -464,24 +467,28 @@ class G1830Meta(BaseMeta):
     ]
 
 
+meta = Meta()
+meta.title()
+
+
 # | export
 
 from rl18xx.game.engine.game.base import BaseGame
 
 
-class G1830Game(BaseGame):
-    def __init__(self):
-        super().__init__(G1830Meta, G1830Entities, G1830Map)
-
+class Game(BaseGame):
+    def __init__(self, names):
         self.register_colors(
-            red="#d1232a",
-            orange="#f58121",
-            black="#110a0c",
-            blue="#025aaa",
-            lightBlue="#8dd7f6",
-            yellow="#ffe600",
-            green="#32763f",
-            brightGreen="#6ec037",
+            **{
+                "red": "#d1232a",
+                "orange": "#f58121",
+                "black": "#110a0c",
+                "blue": "#025aaa",
+                "lightBlue": "#8dd7f6",
+                "yellow": "#ffe600",
+                "green": "#32763f",
+                "brightGreen": "#6ec037",
+            }
         )
 
         self.TRACK_RESTRICTION = "permissive"
@@ -643,6 +650,8 @@ class G1830Game(BaseGame):
             },
         ]
 
+        super().__init__(names=names, metadata=Meta, entities=Entities, map=Map)
+
     def operating_round(self, round_num):
         return OperatingRound(
             self,
@@ -677,7 +686,7 @@ class G1830Game(BaseGame):
         return "optional_6_train" in self.optional_rules
 
 
-G1830Game()
+
 
 
 
