--- a/nbs/game/engine/02_abilities.ipynb
+++ b/nbs/game/engine/02_abilities.ipynb
@@ -144,15 +144,6 @@
     "        self.start_count = self.count\n",
     "        self.passive = passive if passive is not None else len(self.when) == 0\n",
     "\n",
-    "    def __copy__(self):\n",
-    "        new_object = self.__class__()  # Instantiate a new object of the same class\n",
-    "        \n",
-    "        # Copy all attributes from the original object to the new object\n",
-    "        for attr_name, attr_value in self.__dict__.items():\n",
-    "            setattr(new_object, attr_name, attr_value)\n",
-    "        \n",
-    "        return new_object\n",
-    "    \n",
     "    def used(self):\n",
     "        return self.used\n",
     "\n",
@@ -1315,11 +1306,14 @@
     "        self._abilities = []\n",
     "\n",
     "        for ability in abilities:\n",
-    "            class_name = snake_to_pascal(ability[\"type\"])\n",
-    "            if ability.get(\"from\"):\n",
-    "                ability[\"from_\"] = ability.pop(\"from\")\n",
-    "            ability_instance = globals()[class_name](**ability)\n",
-    "            ability_instance.owner = self\n",
+    "            if not isinstance(ability, AbilityBase):\n",
+    "                class_name = snake_to_pascal(ability[\"type\"])\n",
+    "                if ability.get(\"from\"):\n",
+    "                    ability[\"from_\"] = ability.pop(\"from\")\n",
+    "                ability_instance = globals()[class_name](**ability)\n",
+    "                ability_instance.owner = self\n",
+    "            else:\n",
+    "                ability_instance = ability\n",
     "            self._abilities.append(ability_instance)\n",
     "\n",
     "        self._update_start_counter()\n",
@@ -1394,10 +1388,7 @@
     {
      "data": {
       "text/plain": [
-       "[<__main__.BlocksHexes>,\n",
-       " <__main__.Close>,\n",
-       " <__main__.NoBuy>,\n",
-       " <__main__.Shares>]"
+       "['B&O_0']"
       ]
      },
      "execution_count": null,
@@ -1419,7 +1410,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "abilities.abilities"
+    "abilities.abilities[3].shares"
    ]
   },
   {
