--- a/nbs/game/engine/03_actions.ipynb
+++ b/nbs/game/engine/03_actions.ipynb
@@ -107,7 +107,7 @@
     "        if not hasattr(self, \"_dict_cache\"):\n",
     "            self._dict_cache = {\n",
     "                \"type\": self.__class__.__name__,\n",
-    "                \"entity\": self.entity.id(),\n",
+    "                \"entity\": self.entity.id,\n",
     "                \"entity_type\": self.entity.__class__.__name__,\n",
     "                \"id\": self.id,\n",
     "                \"user\": self.user,\n",
@@ -155,7 +155,13 @@
     "            self.id == other.id\n",
     "            if self.id and other.id\n",
     "            else self.created_at == other.created_at\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Type: {self.__class__.__name__}, id: {self.id}, entity: {self.entity}\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Type: {self.__class__.__name__}, id: {self.id}, entity: {self.entity}\""
    ]
   },
   {
