actually now buying shares is supported

--- a/nbs/game/00_engine.ipynb
+++ b/nbs/game/00_engine.ipynb
@@ -406,15 +406,18 @@
       "company: <Company: BO>, auctioning: None, is_new_auction: True, bids: [Type: Bid, id: 4, entity: Player - friend, company: <Company: BO>, price: 225]\n",
       "friend wins the auction for Baltimore & Ohio with the only bid of $225\n",
       "<rl18xx.game.engine.abilities.Shares object>\n",
-      "<bound method Share.corporation of <Share: B&O 20%>>\n",
-      "> \u001b[0;32m/home/revys/workspace/RL_18xx/rl18xx/game/engine/round.py\u001b[0m(1727)\u001b[0;36mcan_buy_shares\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m   1725 \u001b[0;31m    \u001b[0;32mdef\u001b[0m \u001b[0mcan_buy_shares\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentity\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshares\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m   1726 \u001b[0;31m        \u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m-> 1727 \u001b[0;31m        \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mshares\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m   1728 \u001b[0;31m            \u001b[0;32mreturn\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m   1729 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n"
+      "<bound method Share.corporation of <Share: B&O 20%>>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<rl18xx.game.engine.game.title.g1830.Game>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -483,22 +486,75 @@
    "execution_count": null,
    "id": "146618d7-ace4-45be-9989-827f509937c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step: <BuySellParShares>, player: Player - hi, purchasing power: 580\n",
+      "possible actions: [<class 'rl18xx.game.engine.actions.BuyShares'>, <class 'rl18xx.game.engine.actions.Par'>, <class 'rl18xx.game.engine.actions.Pass'>]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Type: BuyShares, id: None, entity: Player - hi, bundle: [<Share Bundle> - shares: [<Share: B&O 10%>], corporation: <bound method Share.corporation of <Share: B&O 10%>>, percent: 10, price: None],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: C&O>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: ERIE>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: NYNH>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (1, 6), price: 90, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (2, 6), price: 82, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (3, 6), price: 76, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (4, 6), price: 71, types: ['par'], corporations: []],\n",
+       " Type: Par, id: None, entity: Player - hi, corporation: [<Corporation: B&M>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: []],\n",
+       " Type: Pass, id: None, entity: Player - hi]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(f\"step: {g.active_step()}, player: {g.current_entity}\")\n",
-    "choices = g.active_step().actions(g.current_entity)\n",
-    "print(f\"choices: {choices}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa35f545-c16b-4b7f-a48f-eeaa8c547683",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "choices = get_all_choices()\n",
-    "choices"
+    "print(\n",
+    "    f\"step: {g.active_step()}, player: {g.current_entity}, purchasing power: {g.buying_power(g.current_entity)}\"\n",
+    ")\n",
+    "print(f\"possible actions: {g.active_step().actions(g.current_entity)}\")\n",
+    "get_all_choices()"
    ]
   },
   {
@@ -506,10 +562,82 @@
    "execution_count": null,
    "id": "73045063-956d-412c-b702-2925cdbf259c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<rl18xx.game.engine.game.title.g1830.Game>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "g.process_action(choices[6])"
+    "g.process_action(get_all_choices()[6])\n",
+    "g.process_action(get_all_choices()[7])\n",
+    "g.process_action(get_all_choices()[8])\n",
+    "g.process_action(get_all_choices()[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e8e9c3c-f3ce-442e-8920-bde9fb403e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Type: Pass, id: 1, entity: Player - hi,\n",
+       " Type: Bid, id: 2, entity: Player - my, company: <Company: CS>, price: 45,\n",
+       " Type: Bid, id: 3, entity: Player - dear, company: <Company: CS>, price: 50,\n",
+       " Type: Bid, id: 4, entity: Player - friend, company: <Company: BO>, price: 225,\n",
+       " Type: Bid, id: 5, entity: Player - hi, company: <Company: SV>, price: 20,\n",
+       " Type: Pass, id: 6, entity: Player - my,\n",
+       " Type: Bid, id: 7, entity: Player - my, company: <Company: DH>, price: 70,\n",
+       " Type: Bid, id: 8, entity: Player - dear, company: <Company: MH>, price: 110,\n",
+       " Type: Bid, id: 9, entity: Player - friend, company: <Company: CA>, price: 160,\n",
+       " Type: Par, id: 10, entity: Player - friend, corporation: [<Corporation: B&O>], par price: [Share Price - coordinates: (0, 6), price: 100, types: ['par'], corporations: [<Corporation: B&O>]],\n",
+       " Type: Par, id: 11, entity: Player - hi, corporation: [<Corporation: PRR>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: [<Corporation: PRR>, <Corporation: NYC>, <Corporation: CPR>]],\n",
+       " Type: Par, id: 12, entity: Player - my, corporation: [<Corporation: NYC>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: [<Corporation: PRR>, <Corporation: NYC>, <Corporation: CPR>]],\n",
+       " Type: Par, id: 13, entity: Player - dear, corporation: [<Corporation: CPR>], par price: [Share Price - coordinates: (5, 6), price: 67, types: ['par'], corporations: [<Corporation: PRR>, <Corporation: NYC>, <Corporation: CPR>]],\n",
+       " Type: BuyShares, id: 14, entity: Player - friend, bundle: [<Share Bundle> - shares: [<Share: PRR 10%>], corporation: <bound method Share.corporation of <Share: PRR 10%>>, percent: 10, price: None]]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.actions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1014e701-2744-4a5c-9429-b50c1f7573c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9808d39-6781-4882-8c40-90bfd9954249",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "933bef79-6773-482e-877e-4d860bd1caaf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -525,9 +653,7 @@
    "id": "98f80aa9-7a32-4463-ae65-457475422bb0",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "g.actions"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -535,9 +661,7 @@
    "id": "e9baca7c-8f0e-469d-b51a-135dc30b3781",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "get_all_choices()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
