--- a/nbs/game/engine/02_abilities.ipynb
+++ b/nbs/game/engine/02_abilities.ipynb
@@ -30,6 +30,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98341810-e21c-44f4-bde6-90ee14173292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | export\n",
+    "\n",
+    "from rl18xx.game.engine.core import Ownable, snake_to_pascal"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4447503f-7088-4b70-bb0f-f38fdc48b3c1",
    "metadata": {},
@@ -108,8 +120,6 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "\n",
-    "from rl18xx.game.engine.core import Ownable\n",
     "\n",
     "\n",
     "class AbilityBase(Ownable):\n",
@@ -1275,20 +1285,6 @@
     "# Abilities Container\n",
     "\n",
     "Contains a list of abilities and methods around creating and dealing with them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "389b288d-2798-4b1c-875c-8865f1f6d0fb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | export\n",
-    "\n",
-    "\n",
-    "def snake_to_pascal(snake_str):\n",
-    "    return \"\".join(word.capitalize() for word in snake_str.split(\"_\"))"
    ]
   },
   {
