--- a/nbs/game/engine/game/titles/00_g1830.ipynb
+++ b/nbs/game/engine/game/titles/00_g1830.ipynb
@@ -63,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d3b9bd6-b4d9-4b90-960d-05c1e52247c6",
+   "metadata": {},
+   "source": [
+    "# Entities"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "55d6eeca-e0ca-4b87-a420-e00183ddc63b",
@@ -269,6 +277,14 @@
     "            \"color\": \"#95c054\",\n",
     "        },\n",
     "    ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ce0d10-7e9e-4ed4-8e9d-86ae1a8f5a28",
+   "metadata": {},
+   "source": [
+    "# Map"
    ]
   },
   {
@@ -484,12 +500,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57e2f3cd-cb47-42cd-8475-32259420e0b4",
+   "cell_type": "markdown",
+   "id": "4d01aed5-4d3c-4434-8a08-f76f3d812151",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Meta"
+   ]
   },
   {
    "cell_type": "code",
@@ -548,6 +564,14 @@
    "source": [
     "meta = Meta()\n",
     "meta.title()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e17ce2ab-8823-435c-acf0-23b55919c30e",
+   "metadata": {},
+   "source": [
+    "# Game"
    ]
   },
   {
