Complete game working. Last thing is bankruptcy verification and adding game loading

--- a/nbs/game/engine/game/titles/00_g1830.ipynb
+++ b/nbs/game/engine/game/titles/00_g1830.ipynb
@@ -587,7 +587,7 @@
     "\n",
     "\n",
     "class Game(BaseGame):\n",
-    "    def __init__(self, names):\n",
+    "    def __init__(self, names, **kwargs):\n",
     "        self.register_colors(\n",
     "            **{\n",
     "                \"red\": \"#d1232a\",\n",
@@ -760,7 +760,7 @@
     "            },\n",
     "        ]\n",
     "\n",
-    "        super().__init__(names=names, metadata=Meta, entities=Entities, map=Map)\n",
+    "        super().__init__(names=names, metadata=Meta, entities=Entities, map=Map, **kwargs)\n",
     "\n",
     "    def operating_round(self, round_num):\n",
     "        return OperatingRound(\n",
