Complete game implementation. Tested manual game to finish, manual bankrupt, and load from 18xx.games json

--- a/.virtual_documents/nbs/game/engine/03_actions.ipynb
+++ b/.virtual_documents/nbs/game/engine/03_actions.ipynb
@@ -67,7 +67,7 @@ class BaseAction:
             self._dict_cache = {
                 "type": pascal_to_snake(self.__class__.__name__),
                 "entity": self.entity.id,
-                "entity_type": self.entity.__class__.__name__,
+                "entity_type": pascal_to_snake(self.entity.__class__.__name__),
                 "id": self.id,
                 "user": self.user,
                 "created_at": int(self.created_at),
@@ -475,7 +475,7 @@ class BuyTrain(BaseAction):
         super().__init__(entity)
         self.train = train
         self.price = price
-        self.variant = variant or train.variant
+        self.variant = variant
         self.exchange = exchange
         self.shell = shell
         self.slots = slots if slots is not None else []
@@ -710,8 +710,8 @@ class Dividend(BaseAction):
     @staticmethod
     def dict_to_args(args, _game):
         return {
-            "kind": args["kind"],
-            "amount": args["amount"],
+            "kind": args.get("kind"),
+            "amount": args.get("amount"),
         }
 
     def args_to_dict(self):
@@ -993,7 +993,7 @@ class Par(BaseAction):
         return {
             "corporation": game.corporation_by_id(args["corporation"]),
             "share_price": game.share_price_by_id(args["share_price"]),
-            "slot": args["slot"],
+            "slot": args.get("slot"),
             "purchase_for": game.get(
                 args.get("purchase_for_type"), args["purchase_for"]
             )
@@ -1098,9 +1098,9 @@ class PlaceToken(BaseAction):
     @staticmethod
     def dict_to_args(args, game):
         return {
-            "city": game.city_by_id(args["city"]),
-            "slot": args["slot"],
-            "cost": args["cost"],
+            "city": game.city_by_id(args.get("city")),
+            "slot": args.get("slot"),
+            "cost": args.get("cost"),
             "tokener": game.corporation_by_id(args.get("tokener"))
             or game.minor_by_id(args.get("tokener")),
             "token_type": args.get("token_type"),
@@ -1598,12 +1598,12 @@ class RunRoutes(BaseAction):
             opts = {
                 "connection_hexes": route["connections"],
                 "hexes": [game.hex_by_id(id) for id in route.get("hexes", []) if id],
-                "revenue": route["revenue"],
-                "revenue_str": route["revenue_str"],
-                "subsidy": route["subsidy"],
-                "halts": route["halts"],
-                "abilities": route["abilities"],
-                "nodes": route["nodes"],
+                "revenue": route.get("revenue"),
+                "revenue_str": route.get("revenue_str"),
+                "subsidy": route.get("subsidy"),
+                "halts": route.get("halts"),
+                "abilities": route.get("abilities"),
+                "nodes": route.get("nodes"),
             }
             # Filter out keys with None values
             opts = {k: v for k, v in opts.items() if v is not None}
@@ -1810,7 +1810,7 @@ class Undo(BaseAction):
     @staticmethod
     def dict_to_args(args, _game):
         return {
-            "action_id": args["action_id"],
+            "action_id": args.get("action_id"),
         }
 
     def args_to_dict(self):
