Fix filepaths, add documentation

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -4,38 +4,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'core'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#| hide\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcore\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'core'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| hide\n",
-    "from core import *"
+    "from rl18xx.core import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 18XX Reinforment Learning Agent (WIP)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RL_18xx\n",
-    "\n",
-    "> RL agent for 18xx (currently 1830)"
+    "This repository contains the Python implementation of 1830 (converted from the original Ruby implementation in https://github.com/tobymao/18xx) and an agent for playing the game, trained by reinforment learning."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "As of April 2024, this project is still under active development. The game engine implementation is complete (and is outlined below), but I am still doing research around the agent implementation."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install RL_18xx\n",
+    "pip install rl18xx\n",
     "```"
    ]
   },
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
+    "The Python game engine can be accessed under the rl18xx.game.engine module and currently only supports 1830. You can create an instance of your game using the following code:"
    ]
   },
   {
@@ -74,7 +74,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1+1"
+    "from rl18xx.game.gamemap import GameMap\n",
+    "\n",
+    "game_map = GameMap()\n",
+    "game = game_map.game_by_title(\"1830\")\n",
+    "g = game({\"1\": \"Player 1\", \"2\": \"Player 2\", \"3\": \"Player 3\", \"4\": \"Player 4\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is also an ActionHelper class that can be used to find all valid actions at each point in the game using the following method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Type: Bid, id: None, entity: Player - Player 1, company: <Company: SV>, price: 20,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 45,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 50,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 55,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 60,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 65,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 70,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 75,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 80,\n",
+       " Type: Bid, id: None, entity: Player - Player 1, company: <Company: CS>, price: 85]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from rl18xx.game.actionfinder import ActionHelper\n",
+    "action_helper = ActionHelper(g)\n",
+    "\n",
+    "action_helper.get_all_choices()[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can then perform that any action from that list by giving it to the game's `process_action` method:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Type: Bid, id: None, entity: Player - Player 2, company: <Company: CS>, price: 40,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 75,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 80,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 85,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 90,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 95,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 100,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 105,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 110,\n",
+       " Type: Bid, id: None, entity: Player - Player 2, company: <Company: DH>, price: 115]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.process_action(action_helper.get_all_choices()[0])\n",
+    "action_helper.get_all_choices()[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A full game walkthrough in this format can be seen in the 02_game_test.ipynb notebook under the `game` directory."
    ]
   },
   {
