Ran nbdev_readme

--- a/_proc/game/engine/game/01_shared_enhancements.ipynb
+++ b/_proc/game/engine/game/01_shared_enhancements.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "output-file: core.html\n",
-    "title: core\n",
+    "output-file: shared_enhancements.html\n",
+    "title: Shared Enhancements\n",
     "\n",
     "---\n",
     "\n"
@@ -20,29 +20,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "language": "python"
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "2f1e443e-10cb-41fa-95bd-6e0f3d905a61",
+   "metadata": {},
    "source": [
-    "import rl18xx.game\n",
-    "#import rl18xx.agent"
+    "This notebook contains all of the python equivalents to the modules/mixins defined within `lib/engine/game/` in the Ruby repo."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "language": "python"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "d18717a4-5914-41d9-a51b-1e4089bf4aa6",
    "metadata": {
     "language": "python"
    },
@@ -65,5 +53,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
