--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# core\n",
-    "\n",
-    "> I don't really know what the core module is for."
+    "# core"
    ]
   },
   {
@@ -34,18 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "def foo(): pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import rl18xx.game\n",
-    "import rl18xx.agent"
+    "#import rl18xx.agent"
    ]
   },
   {
